--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <script>
     parchment.init({
-      default_story: "vault.gblorb"
+      default_story: "The Vault.gblorb"
     });
   </script>
 </body>
