--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>Vault Research Terminal</title>
-  <link rel="stylesheet" href="terminal.css">
+  <link rel="stylesheet" href="Terminal.css">
   <script src="https://curiousdannii.github.io/parchment/parchment.min.js"></script>
 </head>
 <body>
   <div id="terminal-container">
     <div id="game-launcher" style="width: 100%; height: 600px;"></div>
   </div>
-
   <script>
     parchment.init({
-      default_story: "The Vault.gblorb"
+      default_story: "The Vault.gblorb"  // make sure this matches the file name
     });
   </script>
 </body>
