--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Vault Research Terminal</title>
+  <title>The Rise and Fall of the Vault of Stories</title>
   <link rel="stylesheet" href="Terminal.css">
   <script src="https://curiousdannii.github.io/parchment/parchment.min.js"></script>
 </head>
@@ -12,7 +12,7 @@
   </div>
   <script>
     parchment.init({
-      default_story: "The Vault.gblorb"  // make sure this matches the file name
+      default_story: "vault.gblorb"  
     });
   </script>
 </body>
