--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>The Rise and Fall of the Vault of Stories</title>
-  <link rel="stylesheet" href="Terminal.css">
+  <link rel="stylesheet" href="terminal.css">
   <script src="https://curiousdannii.github.io/parchment/parchment.min.js"></script>
 </head>
 <body>
