--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>The Rise and Fall of the Vault of Stories</title>
   <link rel="stylesheet" href="terminal.css">
-  <script src="https://curiousdannii.github.io/parchment/parchment.min.js"></script>
+  <script src="https://curiousdannii.github.io/parchment/parchment.min.js" type="text/javascript"></script>
 </head>
 <body>
   <div id="terminal-container">
